# paw-patrol

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  data.py  links.py  setup.cfg
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
episode_urls/: season_1_urls.txt  season_2_urls.txt  season_3_urls.txt  season_4_urls.txt  season_5_urls.txt  season_6_urls.txt
