[metadata]
name = pypatrol
version = 0.1
description = Python package to scrape and gather data from the Paw Patrol wiki
long_description = file: README.md
classifiers = 
    Programming Language :: Python :: 3.11.0

[options]
packages = find:
include_package_data = True
install_requires = 
    beautifulsoup4==4.11.2
    pandas==1.5.3
    requests==2.28.2
